--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "List of Food",
   "main": "food-list.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node food-list.js"
   },
   "keywords": [
     "Food",
     "Lists"
   ],
   "author": "crenaz@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.13.3"
+  }
 }
